test/good/classes/destructor05.px

class A def
    destructor def
        print 'A'


class B: A def
    x: Int


class C: B def
    destructor def
        print 'C'


[C()] * 5
