test/bad/classes/inheritance02.px

class A(XYZ) def
    Int x
